- changed repository organisation, now unique key is special id, not name. There may be more than one knight with same name. - crated page and back-end to view knights details

--- a/src/main/resources/templates/knights.html
+++ b/src/main/resources/templates/knights.html
@@ -16,13 +16,14 @@
     <thead>
     <tr>
         <td>Knight Name</td>
-        <td>Age</td>
+        <td>Level</td>
     </tr>
     </thead>
     <tbody th:each="knight : ${knights}">
     <tr>
         <td th:text="${knight.name}"></td>
-        <td th:text="${knight.age}"></td>
+        <td th:text="${knight.level}"></td>
+        <td><a th:href="${'/knight?id='+knight.id}">Szczegoly</a></td>
     </tr>
     </tbody>
 </table>
