- exploring request and session spring component scope functionality - added knight delete functionality - added player component

--- a/src/main/resources/templates/knight.html
+++ b/src/main/resources/templates/knight.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 <div class="container">
+    Actual time: <span th:text="${timecomponent.time}"/>
+    Gold amount: <span th:text="${playerinformation.gold}"/>
     <p th:text="${knight.name}"></p>
     <p th:text="${knight.age}"></p>
     <p th:text="${knight.level}"></p>
