--- a/src/main/resources/templates/knightform.html
+++ b/src/main/resources/templates/knightform.html
@@ -16,10 +16,13 @@
         <div class="form-group">
             <label class="control-label">Imie:</label>
             <input type="text" class="form-control" th:field="*{name}"/>
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+
         </div>
         <div class="form-group">
             <label class="control-label">Wiek:</label>
             <input type="number" class="form-control" th:field="*{age}"/>
+            <p th:if="${#fields.hasErrors('age')}" th:errors="*{age}"/>
         </div>
         <div class="row">
             <button type="submit" class="btn btn-default">Save new knight</button>
