--- a/src/main/resources/templates/knights.html
+++ b/src/main/resources/templates/knights.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 <div class="container">
+    Actual time: <span th:text="${timecomponent.time}"/>
+    Gold amount: <span th:text="${playerinformation.gold}"/>
 <table class="table">
     <thead>
     <tr>
@@ -24,6 +26,7 @@
         <td th:text="${knight.name}"></td>
         <td th:text="${knight.level}"></td>
         <td><a th:href="${'/knight?id='+knight.id}">Szczegoly</a></td>
+        <td><a th:href="${'/knight/delete/'+knight.id}">Usun</a></td>
     </tr>
     </tbody>
 </table>
