- added knight quest logic. Quest can be finished and gold earned for it.

--- a/src/main/resources/templates/knights.html
+++ b/src/main/resources/templates/knights.html
@@ -12,8 +12,10 @@
 </head>
 <body>
 <div class="container">
-    Actual time: <span th:text="${timecomponent.time}"/>
     Gold amount: <span th:text="${playerinformation.gold}"/>
+
+    <a th:href="${'/checkQuests'}">Check quests</a>
+
     <table class="table">
         <thead>
         <tr>
