- Added simple authentication check and security

--- a/src/main/resources/templates/knights.html
+++ b/src/main/resources/templates/knights.html
@@ -40,6 +40,11 @@
     <div class="row">
         <a href="/newknight">Add new knight.</a>
     </div>
+    <div class="row">
+        <form action="#" th:action="@{/logout}" method="post">
+            <input type="submit" value="Logout" />
+        </form>
+    </div>
 </div>
 </body>
 </html>
